--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 django = "*"
 psycopg2 = "*"
 channels = {extras = ["daphne"], version = "*"}
+channels-redis = "*"
+asgiref = "*"
 
 [dev-packages]
 
